feat: change title

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
             <i class="fab fa-accessible-icon"></i>
           </span>
           <span>
-            Sem Barreiras
+            Conecta Sem Barreiras
           </span>
         </span>
       </a>
