feat: micaccess tool and +18

--- a/src/app/pages/new-place/new-place.component.html
+++ b/src/app/pages/new-place/new-place.component.html
@@ -49,6 +49,7 @@
                       <option value="Shopping">Shopping</option>
                       <option value="Super Mercado">Super Mercado</option>
                       <option value="Terminal Hidroviário">Terminal Hidroviário</option>
+                      <option value="+18">+18</option>
                       <option value="Outros">Outros</option>
                     </select>
                   </div>
